# statuscodes

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml  docker-publish.yml
