[project]
name = "statuscodes"
version = "0.1.0"
description = "An API that returns different HTTP status codes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
]

[project.scripts]
statuscodes = "uvicorn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.rye]
managed = true
dev-dependencies = []
